Fixed friendNames alignment

--- a/src/components/my-profile/my-profile.module.css
+++ b/src/components/my-profile/my-profile.module.css
@@ -28,25 +28,27 @@
 }
 
 .profileCard {
-  width: 400px;
+  width: 420px;
   margin: 10px;
   padding: 10px;
   margin-top: 230px;
-  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  border: 1px solid black;
 }
 
 .card1 {
-  width: 400px;
+  width: 420px;
   margin: 5px;
   padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 
 .smallTitle {
@@ -68,12 +70,17 @@
 }
 
 .icon {
+  width: 20px;
+  height: 20px;
+  left: 203px;
+  top: 275px;
   margin-left: 30px;
+  color: #f0c000;
 }
 
 /* BUTTON SECTION */
 .buttons {
-  width: 300px;
+  width: 400px;
   margin: 5px 0px 20px 0px;
   padding: 10px;
   display: flex;
@@ -90,14 +97,14 @@ h2 {
 }
 
 .friendAlertCard {
-  width: 400px;
+  width: 420px;
   margin: 5px 0px 20px 0px;
   padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 
 .card {
@@ -163,6 +170,7 @@ h2 {
 }
 
 .friendNames {
+  margin: 0px 15px 10px 10px;
   padding: 10px;
   display: flex;
   flex-direction: row;
